# FBC-Semiconductor-System

./: .gitignore  CLAUDE.md  PROFILE-INSTRUCTIONS.md  QWEN.md  README.md  STATUS.md  TODO.md  known_hosts  onetwo.c
app/: Cargo.toml  build.rs
app/src/: draw.rs  gpu.rs  input.rs  layout.rs  main.rs  pattern_converter.rs  state.rs  text.rs  theme.rs  transport.rs  ui.rs
app/src/panels/: analog.rs  board.rs  datalogs.rs  device.rs  eeprom.rs  facility.rs  firmware.rs  mod.rs  overview.rs  pattern.rs  power.rs  terminal.rs  testplan.rs  vectors.rs  waveform.rs
constraints/: zynq7020.xdc  zynq7020_sonoma.xdc
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  CLEANUP_REPORT.md  DEVICE_CONFIG_SYSTEM.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  FBC.md  FIRMWARE.md  FIRMWARE_API_FOR_GUI.md  FIRST_LIGHT_SESSION.md  FSBL_DDR_ANALYSIS.md  GAPS.md  GUI.md  GUI_MOCKUPS.md  HAL_API.md  HARDWARE.md  MARCH29_CHANGES.md  MIGRATION.md  OPERATIONAL_WORKFLOW.md  PIN_MAPPING.md  PROTOCOL.md  SD_DDR_ARCHITECTURE.md  SONOMA_EVEREST_ARCHITECTURE.md  SONOMA_VS_FBC_POWER_CONTROL_MAP.md  SYSTEM_COMPARISON_END_TO_END.md  SYSTEM_CONNECTIVITY_REFERENCE.md  TOOLING.md  VICOR_ADC_DAC_USAGE.md  ZYNQ_7020_COMPLETE_REFERENCE.md  register_map.md
docs/reference/: FIRMWARE_PL_AUDIT.md
firmware/: Cargo.toml  build_log.txt  fbc.bif  link.ld
firmware/.cargo/: config.toml
firmware/src/: analog.rs  board_config.rs  boot.S  ddr_slots.rs  dma.rs  fbc.rs  fbc_decompress.rs  fbc_loader.rs  fbc_protocol.rs  flight_recorder.rs  lib.rs  main.rs  net.rs  protocol.rs  regs.rs  testplan.rs
firmware/src/hal/: bu2505.rs  ddr.rs  dna.rs  eeprom.rs  gic.rs  gpio.rs  i2c.rs  max11131.rs  mod.rs  pcap.rs  pmbus.rs  sd.rs  slcr.rs  spi.rs  thermal.rs  uart.rs  vicor.rs  xadc.rs
fsbl/: Cargo.toml  link.ld
fsbl/.cargo/: config.toml
fsbl/src/: main.rs
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  store.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/c-db/: README.md
gui/src-tauri/c-engine/: btree.c  http.c  import.c  inventory.c  lrm_db.h  lrm_dump.c  lrm_ffi.c  lrm_ffi.h  lrm_http.h  lrm_import.h  lrm_schema.h  main.c  page.c  schema.c  table.c  tracker.c  v1_compat.c  wal.c
gui/src-tauri/c-engine/pc/: crc32.c  dc.h  dc_api.c  dc_csv.c  dc_gen.c  dc_json.c  dll_api.c  gen_fbc.c  gen_hex.c  gen_seq.c  ir.c  main.c  parse_atp.c  parse_avc_smart.c  parse_pinmap.c  parse_stil_smart.c  pc.h
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: config.rs  export.rs  fbc.rs  lib.rs  main.rs  realtime.rs  sonoma.rs  ssh.rs  state.rs  switch.rs
gui/src-tauri/src/database/: lrm_ffi.rs  mod.rs
gui/src-tauri/src/models/: board.rs  controller.rs  customer.rs  device.rs  lot.rs  mod.rs  position.rs  project.rs  user.rs
gui/src-tauri/src/pattern_converter/: mod.rs  pc_ffi.rs  pin_extractor.rs
gui/src-tauri/src/services/: controller_manager.rs  database_service.rs  mod.rs
host/: Cargo.toml
host/.cargo/: config.toml
host/src/: datalog.rs  fbc_protocol.rs  lib.rs  main.rs  sonoma.rs  sonoma_parse.rs  types.rs
host/src/vector/: compiler.rs  format.rs  fvec.rs  mod.rs
learning/: index.html  layer0_foundations.html  layer10_bitstream.html  layer10b_optimization.html  layer1_fpga_basics.html  layer2_zynq_architecture.html  layer3_io_subsystem.html  layer4_clock_generation.html  layer5_vector_engine.html  layer6_firmware.html  layer6b_hal.html  layer6c_thermal.html  layer7_pmbus.html  onetwo_derivation (1).md
reference/: Device Files -PIN MAP, LEVEL, TIMING, TESTPLAN, TESTSTEP.txt  FIRMWARE_REFERENCE.md  MIO37-39CNTL.sch  PIN_MAP  PowerOff  ZYNQ_REGISTER_MAP.md  debug.tim  iliad.map  ~MIO37-39CNTL.sch
reference/Marvell_Iliad_S0026/: DupPins  GroupPins  PowerOn  all.sh  ddr.sh  gpio.sh  gserp.sh  mbist.sh  mbist.tim  scan.sh
reference/Normandy/: ANALYSIS.md  NominalPwr  PIN_MAP  PowerOff  PowerOn  allegro_free_viewer.jrl  anc.sh  debug.tim  hbmio.sh  mbist.sh  normandy.map  normandy_contract.yaml  pattern_verification_template.sh  pcie.sh  s31_sch_4core_aug_5.opj  scan.sh  temp.sh
reference/Quad Board/: 02291B_QUAD_BOARD_BOM.XLS  Copy of EQ_QuadGerbers10Dec2018(PW197A92025).xlsx  DimenController2Quad.xlsx  QuadPowerDist04Dec2018 (Bill Of Materials).csv  QuadPowerDist04Dec2018 (PCB - Design Rule Check Report).txt  QuadPowerDist04Dec2018 (PCB - Forward Design Changes Report).txt  QuadPowerDist04Dec2018 (PCB - Pour Copper Report).txt  QuadPowerDist04Dec2018 (PCB - Schematic and PCB Check Report).txt  QuadPowerDist04Dec2018.dxf  QuadPowerDist04Dec2018.idb  QuadPowerDist04Dec2018.idl  QuadPowerDist04Dec2018.pcb  QuadPowerDist04Dec2018.sch  QuadPowerDist05Feb2018.pcb  QuadPowerDist05Feb2018.sch  QuadPowerDist14Sep2016 (Bill Of Materials).xlsx  QuadPowerDist14Sep2016.pcb  QuadPowerDistAssembly.mop  QuadPowerDistAssembly.pcb  ~QuadPowerDist04Dec2018.pcb  (+2 more)
rtl/: axi_device_dna.v  axi_fbc_ctrl.v  axi_freq_counter.v  axi_stream_fbc.v  axi_vector_status.v  clk_ctrl.v  clk_gen.v  error_bram.v  error_counter.v  fbc_decoder.v  fbc_dma.v  fbc_pkg.vh  fbc_top.v  io_bank.v  io_cell.v  io_config.v  system_top.v  vector_engine.v
scripts/: bitgen_from_checkpoint.tcl  build_bitstream.tcl  gen_bitstream.tcl  thermal_sim.py  vivado_xadc_read.tcl  xsdb_check.tcl  xsdb_deploy.tcl  xsdb_fault.tcl  xsdb_net_check.tcl  xsdb_probe.tcl  xsdb_scan.tcl  xsdb_scan2.tcl  xsdb_xadc_correct.tcl  xsdb_xadc_deep.tcl  xsdb_xadc_enable.tcl  xsdb_xadc_fix.tcl  xsdb_xadc_fresh.tcl  xsdb_xadc_no_pl.tcl  xsdb_xadc_probe.tcl  xsdb_xadc_test.tcl
tb/: clk_gen_tb.v  error_inject_tb.v  fbc_decoder_tb.v  fbc_integration_tb.v  fbc_top_tb.v  forloop_test.v  io_bank_debug.v  io_bank_mini.v  io_bank_simple_tb.v  io_bank_tb.v  io_cell_tb.v  minimal_tb.v  nocomment_tb.v  param_debug.v  param_test_tb.v  range_debug.v  range_debug_wide.v  simple_tb.v  tiny2_tb.v  tiny_tb.v  width_debug.v  width_debug2.v  xilinx_sim_stubs.v
testplans/: calibration_board_revB.json
tools/: onetwo_routing_verify.py  rawwrite.c
(+345 files in other folders)
