[package]
name = "fbc-gui"
version = "1.0.0"
edition = "2021"
authors = ["ISE Labs"]
description = "FBC Semiconductor System GUI"
license = "Proprietary"

[lib]
name = "fbc_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
winresource = "0.1"
cc = "1.0"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FBC Protocol (raw Ethernet)
pnet = "0.35"
pnet_datalink = "0.35"
pnet_packet = "0.35"
byteorder = "1.5"

# Async
tokio = { version = "1", features = ["full", "sync"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serial port for switch communication
serialport = "4.3"

# ═══════════════════════════════════════════════════════════════
# EDA MIGRATION — New dependencies for fleet controller
# ═══════════════════════════════════════════════════════════════

# SSH client (russh — pure Rust, async)
russh = "0.42"
russh-keys = "0.42"
async-trait = "0.1"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for Everest sync)
reqwest = { version = "0.12", features = ["json"] }

# UUID for Guid types
uuid = { version = "1.8", features = ["v4", "serde"] }

# EDA migration — domain models
once_cell = "1.19"

# ═══════════════════════════════════════════════════════════════
# PIN TABLE EXTRACTION — CSV/Excel/PDF → Device Config
# ═══════════════════════════════════════════════════════════════
calamine = "0.26"       # Excel (.xlsx) parsing
pdf-extract = "0.10"    # PDF text extraction
csv = "1.3"             # CSV parsing in Rust (for preview data)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
